# test

./: .azureignore  .env.example  .gitignore  .replit  database.py  main.py  models.py  package.json  pyproject.toml  replit.nix  requirements.txt  utils.py
.github/workflows/: main_acadef44.yml  main_magasin-asor.yml  test-build.yaml  test-orchestration.yaml
.streamlit/: config.toml
attached_assets/: Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-multiselect-elements-with-the-same--1738244576382.txt
mobile/: App.js  app.json  package-lock.json  package.json
mobile/screens/: AttendanceScreen.js  HomeScreen.js  LoginScreen.js
pages/: 1_presence.py  2_activites.py  3_stocks.py  4_messages.py  5_rapports.py  6_admin.py  7_progression.py  8_profil.py
static/: footer.html  style.css
